# POO2022-1-IVH

./: BasePlusCommissionEmployee.cpp  BasePlusCommissionEmployee.h  CMakeLists.txt  Circulo.cpp  Circulo.h  CommissionEmployee.cpp  CommissionEmployee.h  Cuadrado.cpp  Cuadrado.h  Cuadrilatero.cpp  Cuadrilatero.h  DailyEmployee.cpp  DailyEmployee.h  Employee.cpp  Employee.h  Figura.cpp  Figura.h  HourlyEmployee.cpp  HourlyEmployee.h  README.md  Rectangulo.cpp  Rectangulo.h  SalariedEmployee.cpp  SalariedEmployee.h  Taller Debug.docx  View.cpp  View.h  main.cpp
